--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
 </head>
 <body>
     <h1 class="animate__animated animate__backInDown">Fifty projects Init</h1>
@@ -23,7 +24,7 @@
         </a>
     </button>
     <div class="content">
-        <div class="project animate__animated animate__bounceInLeft" style="background-image: url('./images/project1.PNG');">
+        <div class="project animate__animated" style="background-image: url('./images/project1.PNG');">
             <h2>01</h2>
             <div class="description">
                 <h2>Expanding Cards</h2>
@@ -31,7 +32,7 @@
                 <a class="go-demo" target="_blank" href="./projects/01 - expanding cards/index.html"><i class="fas fa-link"></i> Live Demo</a>
             </div>
         </div>
-        <div class="project animate__animated animate__bounceInRight" style="background-image: url('./images/project2.PNG');">
+        <div class="project animate__animated" style="background-image: url('./images/project2.PNG');">
             <h2>02</h2>
             <div class="description">
                 <h2>Stepper</h2>
@@ -39,7 +40,7 @@
                 <a class="go-demo" target="_blank" href="./projects/02 - stepper/index.html"><i class="fas fa-link"></i> Live Demo</a>
             </div>
         </div>
-        <div class="project animate__animated animate__bounceInLeft" style="background-image: url('./images/project3.PNG');">
+        <div class="project animate__animated hide" style="background-image: url('./images/project3.PNG');">
             <h2>03</h2>
             <div class="description">
                 <h2>Rotating Menu</h2>
@@ -47,12 +48,20 @@
                 <a class="go-demo" target="_blank" href="./projects/03 - rotating menu/index.html"><i class="fas fa-link"></i> Live Demo</a>
             </div>
         </div>
-        <div class="project animate__animated animate__bounceInRight" style="background-image: url('./images/project4.PNG');">
+        <div class="project animate__animated hide" style="background-image: url('./images/project4.PNG');">
             <h2>04</h2>
             <div class="description">
                 <h2>Search Widget</h2>
                 <p>Fancy widget for searching, listen to enter event to show loading</p>
                 <a class="go-demo" target="_blank" href="./projects/04 - search widget/index.html"><i class="fas fa-link"></i> Live Demo</a>
+            </div>
+        </div>
+        <div class="project animate__animated hide" style="background-image: url('./images/project5.PNG');">
+            <h2>05 </h2>
+            <div class="description">
+                <h2>Loader up</h2>
+                <p>Loader counting up percent</p>
+                <a class="go-demo" target="_blank" href="./projects/05 - loading up/index.html"><i class="fas fa-link"></i> Live Demo</a>
             </div>
         </div>
     </div>
