--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
                 <a class="go-demo" target="_blank" href="./projects/05 - loading up/index.html"><i class="fas fa-link"></i> Live Demo</a>
             </div>
         </div>
+        <div class="project animate__animated hide" style="background-image: url('./images/project6.PNG');">
+            <h2>06 </h2>
+            <div class="description">
+                <h2>Scroll show</h2>
+                <p>Show/hide content when scrolling webpage</p>
+                <a class="go-demo" target="_blank" href="./projects/06 - scroll show/index.html"><i class="fas fa-link"></i> Live Demo</a>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
