--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
                 <a class="go-demo" target="_blank" href="./projects/06 - scroll show/index.html"><i class="fas fa-link"></i> Live Demo</a>
             </div>
         </div>
+        <div class="project animate__animated hide" style="background-image: url('./images/project7.PNG');">
+            <h2>07 </h2>
+            <div class="description">
+                <h2>Spand hover</h2>
+                <p>Divided landing page expanding on hover</p>
+                <a class="go-demo" target="_blank" href="./projects/07 - expand hover/index.html"><i class="fas fa-link"></i> Live Demo</a>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
