--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
                 <a class="go-demo" target="_blank" href="./projects/07 - expand hover/index.html"><i class="fas fa-link"></i> Live Demo</a>
             </div>
         </div>
+        <div class="project animate__animated hide" style="background-image: url('./images/project8.PNG');">
+            <h2>08 </h2>
+            <div class="description">
+                <h2>Fancy form wave</h2>
+                <p>Effect in label when an input get focused</p>
+                <a class="go-demo" target="_blank" href="./projects/08 - form wave/index.html"><i class="fas fa-link"></i> Live Demo</a>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
