--- a/index.html
+++ b/index.html
@@ -88,6 +88,22 @@
                 <a class="go-demo" target="_blank" href="./projects/08 - form wave/index.html"><i class="fas fa-link"></i> Live Demo</a>
             </div>
         </div>
+        <div class="project animate__animated hide" style="background-image: url('./images/project9.PNG');">
+            <h2>09 </h2>
+            <div class="description">
+                <h2>Jokes APi</h2>
+                <p>Simple use of fetch</p>
+                <a class="go-demo" target="_blank" href="./projects/09 - jokes api/index.html"><i class="fas fa-link"></i> Live Demo</a>
+            </div>
+        </div>
+        <div class="project animate__animated hide" style="background-image: url('./images/project10.PNG');">
+            <h2>10 </h2>
+            <div class="description">
+                <h2>Collapsed content</h2>
+                <p>Collapsible and expandible boxes by clicking a button</p>
+                <a class="go-demo" target="_blank" href="./projects/10 - collapsed content/index.html"><i class="fas fa-link"></i> Live Demo</a>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
