--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
                 <a class="go-demo" target="_blank" href="./projects/10 - collapsed content/index.html"><i class="fas fa-link"></i> Live Demo</a>
             </div>
         </div>
+        <div class="project animate__animated hide" style="background-image: url('./images/project11.PNG');">
+            <h2>11 </h2>
+            <div class="description">
+                <h2>Collapsed menu</h2>
+                <p>Collapsible options menu</p>
+                <a class="go-demo" target="_blank" href="./projects/11 - collapsed menu/index.html"><i class="fas fa-link"></i> Live Demo</a>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
