--- a/index.html
+++ b/index.html
@@ -112,6 +112,14 @@
                 <a class="go-demo" target="_blank" href="./projects/11 - collapsed menu/index.html"><i class="fas fa-link"></i> Live Demo</a>
             </div>
         </div>
+        <div class="project animate__animated hide" style="background-image: url('./images/project12.PNG');">
+            <h2>12 </h2>
+            <div class="description">
+                <h2>Followers counter</h2>
+                <p>Zero to your followers counter widget</p>
+                <a class="go-demo" target="_blank" href="./projects/12 - followers counter/index.html"><i class="fas fa-link"></i> Live Demo</a>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
